# Rain-Tux

./: Makefile  README.md  launch.env  pyproject.toml
docs/: UI_BUILD_PROMPT.md
raintux/: __init__.py  __main__.py  launch_env.py
raintux installer temp/: README.txt
raintux/api/: __init__.py  rest_api.py  websocket.py
raintux/compat/: __init__.py  ini_normalizer.py  lua_sandbox.py  plugin_shim.py
raintux/core/: __init__.py  config.py  engine.py  event_bus.py  measure_manager.py  meter_renderer.py  skin_parser.py
raintux/data/assets/: README.txt
raintux/data/skins/Minimal/: skin.ini
raintux/measures/: __init__.py  base_measure.py  calc_measure.py  cpu_measure.py  disk_measure.py  lua_measure.py  network_measure.py  nowplaying_measure.py  ram_measure.py  time_measure.py  weather_measure.py
raintux/meters/: __init__.py  bar_meter.py  base_meter.py  histogram_meter.py  image_meter.py  rotator_meter.py  roundline_meter.py  shape_meter.py  string_meter.py
raintux/onboarding/: __init__.py  first_run.py
raintux/wayland/: __init__.py  compositor_detect.py  gnome_backend.py  kde_backend.py  layer_window.py  wlr_backend.py  x11_fallback.py
ui/: tailwind.config.ts
ui/public/: marketplace.example.json
ui/src/: index.css
ui/src/components/: AboutSettings.tsx  Layout.tsx  LogViewer.tsx  ManageSkins.tsx  Marketplace.tsx  SkinDetails.tsx  SkinTree.tsx  Toolbar.tsx
ui/src/lib/: api.ts  types.ts  useWebSocket.ts
ui/src/pages/: Index.tsx
ui/src/store/: uiStore.ts
